# DInvoke_rs

./: Cargo.toml
dinvoke_rs/: Cargo.toml
src/: lib.rs
src/data/: mod.rs
