[package]
name = "dinvoke"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true

[dependencies]
libc = "0.2.101"
winproc = "0.6.4"
litcrypt = "0.3"
winapi = "*"
windows = {version = "0.34", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming"
]}